# hermes-model-router

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  plugin.yaml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: test.yml
docs/: LIMITATIONS.md  PLAN.md  UI.md  UPSTREAM_PATCHING.md
eval/: prompts.jsonl
hermes_model_router/: __init__.py  config.py  determination.py  directives.py  middleware.py  models.py  plugin.yaml  tiers.py
scripts/: bump_version.py
tests/: test_determination.py  test_routing.py
upstream/: 0001-add-pre-model-selection-seam.patch  README.md
