[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-model-router"
version = "0.1.3"
description = "Local, no-LLM-call complexity router for the Hermes agent (Nous Research)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Lorenzo Vigentini" }]
keywords = ["hermes", "llm", "routing", "model-router", "nous-research"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["hermes_model_router"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
